# prost

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
api/: auth.py  database.py  main.py  schemas.py
api/bar/: bar.py
api/config/: product_categories.py  products.py  schemas.py  user.py
api/deliverer/: deliverer.py
models/config/: Product.py  ProductCategory.py  User.py
models/order/: ProductState.py
ui/: .gitignore  README.md  package-lock.json  package.json
ui/src/: App.vue  api.ts  types.ts
ui/src/assets/: main.css
ui/src/components/: AdminLayout.vue  BarLayout.vue  DelivererLayout.vue
ui/src/router/: index.ts
ui/src/views/: BarView.vue  CategoriesView.vue  HomeView.vue  LoginView.vue  ProductsView.vue  PublicHomeView.vue  UsersView.vue
ui/src/views/admin/: CategoriesView.vue  HomeView.vue  ProductsView.vue  UsersView.vue
ui/src/views/bar/: BarView.vue
ui/src/views/deliverer/: DelivererView.vue
