[project]
name = "prost"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Blättler",email = "michi.blaettler@bluewin.ch"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
